# hello-cpp

./: .gitignore  CMakeLists.txt  README.md
.nvim/: config.json
src/: CMakeLists.txt  main.cpp  split.cpp  split.h
src/utils/: CMakeLists.txt  csv.hpp
tests/: CMakeLists.txt  split_test.cpp
